ozone: drm: Allow importing buffers that cannot be added as framebuffers

After 2203dc8a297e [formerly 6fc38604ad77] ("ozone: drm: Move DrmFramebuffer from GbmBuffer to
GbmPixmap"), if a buffer's format is supported for scanout but cannot
be added as a framebuffer, we fail the import.

This broke CTS tests, so relax this test and add a note.

Bug: 872681
Test: ozone_unittests

Change-Id: I35e18f043abe21f5554369129da05448f990bfd4
Reviewed-on: https://chromium-review.googlesource.com/1169595
Commit-Queue: Michael Spang <spang@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582254}
Former-commit-id: 4ccea48289edb2b94d4b9fc8d6d5f0fcca5437c5